samples/_failures_safe/1761792698_9d3c3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_955c75c8.c: In function ‘main’:
./samples/SAFE/__tmp_955c75c8.c:153:5: error: expected expression at end of input
  153 |     if (multiply_matrices(&a,
      |     ^~
./samples/SAFE/__tmp_955c75c8.c:153:9: error: too few arguments to function ‘multiply_matrices’
  153 |     if (multiply_matrices(&a,
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_955c75c8.c:74:5: note: declared here
   74 | int multiply_matrices(const Matrix *a, const Matrix *b, Matrix *result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_955c75c8.c:153:5: error: expected declaration or statement at end of input
  153 |     if (multiply_matrices(&a,
      |     ^~
